[tool.poetry]
name = "pricecappredictor"
version = "0.1.0"
description = "Package to predict the Ofgem Price Cap"
authors = ["Richard Haythornthwaite <richardhaythornthwaite@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.22.0"
polars = "^0.18.2"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
urllib3 = "^2.0.3"
xmltodict = "^0.13.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
ruff = "^0.0.270"
black = "^23.3.0"
ipykernel = "^6.23.1"
pre-commit = "^3.3.2"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
